test/Fail/UnquoteDeclNotDefined.err
UnquoteDeclNotDefined.agda:9,1-10,27: error: [GenericError]
Missing definition for UnquoteDeclNotDefined.f
